# envirometer

./: .gitignore  README.md
.github/workflows/: build.yaml
capteur/: .env.example  Cargo.toml
capteur/.cargo/: config.toml
capteur/src/: capteur.rs  main.rs  rtc.rs  web.rs
web/: .env.example  Cargo.toml  Dockerfile  docker-compose.local.yaml  docker-compose.yaml  docker-stack.yaml
web/.cargo/: config.toml
web/migrations/: 20250121154306_initial.sql
web/src/: env.rs  main.rs  measure.rs  rtc.rs
