[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
dotenvy = "0.15.7"
tower = "0.5.2"
mime = "0.3.17"
serde_json = "1.0.137"
